# MaskBid

./: .gitignore  CMakeLists.txt  Flow.md  README.md
MaskBidApp/: Dockerfile
src/: CMakeLists.txt  ElGamal.h  base.h  ec.h  hash.h  main.cpp
